# CitiBike-Demand-Prediction

./: .gitignore  .pre-commit-config.yaml  =4.2.0  EDA.ipynb  EDA.py  README.md  environment.yml  pyproject.toml
data/mapping/: station_location_mapping.csv
data/test/: test.csv
evaluation/: demand_model_performance.csv  incoming_bikes_model_performance.csv  outgoing_bikes_model_performance.csv
model/: best_model_outgoing.json
model_performance/: demand_model_performance.csv
models/: XGBoost with time-lagged features.joblib  best_model_incoming.json  best_model_incoming_bikes.json  best_model_outgoing_bikes.json  tbats_model.joblib  xgboost.joblib
src/: EDA.ipynb  allocation_forecast.py  demand_forecast.py  geo_exploration.py  map.html  model_explainability.py  network.py  network_exploration.ipynb  network_exploration.py  seasonality.py  sesasonality.py  utils.py
viz/: heatmap.html  net_bikes.html  predictions.html  ~$causalens_MC.pptx
