[project]
name = "citibike-demand-prediction"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
	"altair>=5.4.1",
	"folium>=0.18.0",
	"ipykernel>=6.29.5",
	"ipywidgets>=8.1.5",
	"joblib>=1.4.2",
	"matplotlib>=3.9.2",
	"nbformat>=5.10.4",
	"networkx>=3.3",
	"numpy>=1.26.4",
	"pandas>=2.2.2",
	"plotly>=5.24.1",
	"requests>=2.32.3",
	"scikit-learn>=1.5.2",
	"scipy>=1.14.1",
	"seaborn>=0.13.2",
	"shap>=0.46.0",
	"statsmodels>=0.14.4",
	"tbats>=1.1.3",
	"tqdm>=4.66.6",
	"xgboost>=2.1.2",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src"]
